Implemented Login Page

--- a/views/common/navbar.pug
+++ b/views/common/navbar.pug
@@ -1,11 +1,14 @@
 mixin navbar()
-    nav.navbar.navbar-expand.navbar-light.bg-light
-        a(href="/",aria-label="Golden Goose").navbar-brand.mr-0
-        .mr-md-2
-            img(src="/images/golden-goose.svg",width="36",height="36")
-        .collapse.navbar-collapse
-            ul.navbar-nav.mr-auto
-                li.nav-item
-                    a.nav-link(href="/") Home
-                li.nav-item
-                    a.nav-link(href="/leads") Leads
+    .main_nav
+        nav.menu.col_header
+            nav.navbar.navbar-expand.navbar-light.bg-light
+                a.navbar-brand(href='/') Restaurants
+                button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
+                    span.navbar-toggler-icon                
+                .collapse.navbar-collapse
+                    ul.navbar-nav.mr-auto
+                        li.nav-item
+                            a.nav-link(href="/") Home
+                        li.nav-item
+                            a.nav-link(href="/leads") Leads
+                        
