--- a/views/common/head.pug
+++ b/views/common/head.pug
@@ -1,7 +1,31 @@
 mixin head(title)
     head
         meta(charset='utf-8')
-        title=title
+        title Menu        
+        meta(name='description', content='AuCreative theme tempalte')
+        meta(name='author', content='AuCreative')
+        meta(name='keywords', content='AuCreative theme template')
+        meta(name='viewport', content='width=device-width, initial-scale=1')
         //[if lt IE 9]><script src = "http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]
         // <base href =  "/">
         link(rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous")
+        // Basic Page Needs
+        // Mobile Specific Metas
+        link(rel='icon', type='image/png', href='images/icons/home-boxed-logo.png')
+        // ===============================================================================================
+        link(rel='stylesheet', type='text/css', href='vendor/bootstrap/css/bootstrap.min.css')
+        // ===============================================================================================
+        link(rel='stylesheet', type='text/css', href='fonts/font-awesome-4.7.0/css/font-awesome.min.css')
+        // ===============================================================================================
+        link(rel='stylesheet', type='text/css', href='vendor/css-hamburgers/hamburgers.min.css')
+        // ===============================================================================================
+        link(rel='stylesheet', type='text/css', href='vendor/select2/select2.min.css')
+        // ===============================================================================================
+        link(rel='stylesheet', type='text/css', href='vendor/daterangepicker-bootstrap/daterangepicker.css')
+        // ===============================================================================================
+        link(rel='stylesheet', type='text/css', href='vendor/animsition/dist/css/animsition.min.css')
+        // ===============================================================================================
+        link(rel='stylesheet', type='text/css', href='css/main.css')
+        // ===============================================================================================
+        link(rel='stylesheet', type='text/css', href='css/animate.css')
+        // ===============================================================================================
