--- a/views/common/navbar.pug
+++ b/views/common/navbar.pug
@@ -11,7 +11,7 @@ mixin navbar(user)
                             a.nav-link(href="/") Home  
                         if user && user.is_admin
                             li.nav-item
-                                a.nav-link(href="/leads") Leads
+                                a.nav-link(href="/leads") Accounts
                         li.nav-item
                             a.nav-link(href="/restaurants") Restaurants
                 .navbar-right 
@@ -19,7 +19,7 @@ mixin navbar(user)
                         // Dropdown primary
                         .dropdown
                             // Trigger
-                            a.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false') Welcome #{user.email}
+                            a.btn.btn-primary.dropdown-toggle(data-toggle='dropdown', aria-haspopup='true', aria-expanded='false') Welcome #{user.email}
                             // Menu
                             .dropdown-menu.dropdown-primary
                                 a.dropdown-item(href='/logout') Logout                                                                                               
@@ -28,5 +28,4 @@ mixin navbar(user)
                             li.nav-item
                                 a.nav-link(href="/signup") SignUp
                             li.nav-item
-                                a.nav-link(href="/login") Login
-                        
+                                a.nav-link(href="/login") Login                        
