--- a/views/landing.pug
+++ b/views/landing.pug
@@ -12,7 +12,7 @@ html(lang='en')
       .container
         .row.align-items-center
           .col-md-6.order-md-1.text-center.text-md-left-.pr-md-5
-            h1.md-3 Minimum Viable Landing Page
+            h1.md-3 Subscribe to The App
             p.lead Restaurants
             p.lead.mb-4 To show list of restaurants from DB.
             form(action="/",method="POST")
