--- a/views/user/login.pug
+++ b/views/user/login.pug
@@ -20,10 +20,10 @@ html(lang='en')
                       label.small.mb-1.mt-3 Password:
                       input(placeholder='Enter your current password',required=true, name='password', type='password', value='').form-control
                       button.mt-3.btn.btn-primary(type='submit') Log in
+                      p.mt-2.mb-0
+                        | Forgot your password? #[a(href="#") Reset here].
                       p.m-0
                         | Don't have an account? #[a(href="/signup") Sign up here].
-                    //-   p.mt-2.mb-0
-                    //-     | Forgot your password? #[a(href="#") Reset here].
 
     include ../common/footer.pug
     +footer()
