--- a/views/lead/leads.pug
+++ b/views/lead/leads.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
   include ../common/head.pug
-  +head("Leads")
+  +head("Accounts")
   body       
     header
         link(href='https://use.fontawesome.com/releases/v5.8.1/css/all.css', rel='stylesheet')
@@ -13,21 +13,21 @@ html(lang='en')
         +navbar(user)
         .container
             .row.align-items-center
-                .col-md-6.order-md-1.text-center.text-md-left-.pr-md-6                
-                    h1 Leads
-                    table.table.table-hover
-                        thead.thread-dark
-                        tr
-                            th(scope="col") Email
-                            th(scope="col") Actions                        
-                        tr
-                        tbody
-                        for lead in leads
-                            tr(id=lead.id) 
-                            td 
-                                span #{lead.email}
-                            td
-                                a(href="/lead/" + lead.id) Details
+                .col-md-6.order-md-1.text-center.text-md-left.pr-md-6                
+                    //- h1 Leads
+                    //- table.table.table-hover
+                    //-     thead.thread-dark
+                    //-     tr
+                    //-         th(scope="col") Email
+                    //-         th(scope="col") Actions                        
+                    //-     tr
+                    //-     tbody
+                    //-     for lead in leads
+                    //-         tr(id=lead.id) 
+                    //-         td 
+                    //-             span #{lead.email}
+                    //-         td
+                    //-             a(href="/lead/" + lead.id) Details
             // Editable table
             .card
                 h3.card-header.text-center.font-weight-bold.text-uppercase.py-4 Leads
@@ -40,7 +40,7 @@ html(lang='en')
                                 th.text-center Email
                                 th.text-center Action                            
                             tr
-                        tbody                        
+                        tbody                          
                         for lead in leads
                             tr(id=lead.id)
                             td.pt-3-half
@@ -54,11 +54,13 @@ html(lang='en')
                             //-     span.table-down
                             //-         a.indigo-text(href='#!')
                             //-         i.fas.fa-long-arrow-alt-down(aria-hidden='true')
-                            td
-                                span.table-remove
-                                    button.btn.btn-primary.btn-rounded.btn-sm.my-0(type='button') Edit
-                                span.table-remove
-                                    button.btn.btn-danger.btn-rounded.btn-sm.my-0(type='button') Remove
+                            td                                
+                                form(action="/lead/" + lead.id,method="GET")
+                                    span.table-remove
+                                        button.btn.btn-primary.btn-rounded.btn-sm.my-0(type="submit") Edit
+                                form(action="/lead/"+lead.id+"/delete",method="POST")
+                                    span.table-remove
+                                        button.btn.btn-danger.btn-rounded.btn-sm.my-0(value="Submit",type="submit") Remove
                             
                         // This is our clonable table line
                         
@@ -82,13 +84,7 @@ html(lang='en')
             
 
                              
-    script(type='text/javascript', src='/javascripts/addons/datatables.min.js')    
-    script.
-        $(document).ready(function () 
-        {
-            $('#dtBasicExample').DataTable();
-            $('.dataTables_length').addClass('bs-select');
-        });
+    
     include ../common/footer.pug
     +footer()
     //- script(src='https://code.jquery.com/jquery-3.2.1.min.js')
